<resources>
    <string name="app_name">Maitree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_text"><b>Maitree means Friendship.</b>\n\nIt was in 1993, when Mr Virendra and Deepika Rathod started this activity in Ahmedabad and welcomed a group of 5 members from France. Maitree has come a long way since then.\n\nOur friendship with the French goes beyond political and geographical boundaries. We come from different cultural and social backgrounds, but our fondness for each other, our love for crafts, culture and cuisine is same.\n\nMaitreeis about universal love and camaraderie. Your visit begins a new chapter in our life. When you leave, you shall leave behind and take with you - memories of the time shared with friends whom you met for the first time, and probably shall never meet again. But the time we spent together shall live with us, forever.\n\nMay the spirit of love, friendship and Maitreeflow endlessly.</string>
    <string name="title_activity_directory">Directory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_about__developers">About_Developers</string>

    <string name="harsh_email"><u>(dalwadi2@gmail.com)</u></string>
    <string name="pathik_email"><u>(pathik.s.patel@gmail.com)</u></string>
    <string name="staffone_email"><u>(christianstaffone@gmail.com)</u></string>
    <string name="dhruv_email"><u>(dhruvsoni243@gmail.com)</u></string>
    <string name="chirag_email"><u>(chiragpandya88@gmail.com)</u></string>
    <string name="title_activity_french__food">French_Food</string>


</resources>
